Only trigger navigation in distiller if in print preview

BUG=605432, 611161

Review-Url: https://codereview.chromium.org/1920563002
Cr-Commit-Position: refs/heads/master@{#393065}

Former-commit-id: 80ef02b21fe174b3c6a4588b1f6984b13f4d88f4