components/dom_distiller/core/javascript/dom_distiller_viewer.js
@@ -43,7 +43,8 @@ function showLoadingIndicator(isLastPage) {
   // This function will be one of the last things to occur when a page is
   // loaded. This is temporarily used to signal print preview to generate
   // a PDF.
-  if (isLastPage) {
+  if (isLastPage && typeof isPrintPreviewDistiller !== 'undefined'
+      && isPrintPreviewDistiller) {
     setTimeout(function() {
         window.location = window.location + "#loaded";
     }, 0);
